main html elements added

--- a/index.html
+++ b/index.html
@@ -4,7 +4,130 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap"
+      rel="stylesheet"
+    />
+
+    <title>Responsive Navbar</title>
   </head>
-  <body></body>
+  <body>
+    <nav></nav>
+    <main>
+      <h1>Tech Bubble is Bursting...</h1>
+      <p>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Alias laborum
+        eveniet doloremque delectus eligendi nobis ipsam, consequatur ullam
+        laboriosam explicabo deleniti culpa labore distinctio cumque,
+        repudiandae a tempore voluptatem architecto maxime dolorem,
+        reprehenderit aspernatur ut corporis et. Doloribus a enim similique iure
+        ad obcaecati porro eligendi expedita officia perspiciatis repellat
+        voluptas soluta ab molestiae accusamus impedit, rem suscipit eos quas
+        quidem, ratione magnam sequi. Sed odit nostrum laboriosam eaque
+        accusantium, eius qui voluptatum soluta nobis animi possimus nesciunt!
+        Libero debitis quaerat ratione ullam distinctio. Mollitia minima unde
+        quis cupiditate similique, ducimus suscipit natus expedita voluptatem
+        libero doloremque repudiandae optio ea possimus ipsam voluptatibus
+        laboriosam enim nam recusandae. Distinctio, sint esse, accusantium
+        veritatis perferendis hic nihil at eligendi ut minus aspernatur sit
+        architecto enim rem magni dolore temporibus, ipsam ad velit maxime
+        natus? Laborum ducimus repellendus ad ipsum fuga blanditiis quo nemo
+        quaerat repudiandae! Quidem non sint ut provident necessitatibus. Unde
+        ab ipsam quis voluptas mollitia excepturi enim asperiores perferendis
+        laborum, harum et placeat non neque. Explicabo eveniet alias dolorum
+        amet quae tenetur molestias voluptates harum tempore ex distinctio
+        soluta accusamus esse velit, saepe aliquid eaque et quis in rem quos
+        impedit? Provident voluptatibus ex sed eos, porro veritatis dicta
+        officia, consequuntur, alias eveniet quo? Magnam ducimus, iste nesciunt
+        labore quaerat, inventore assumenda suscipit eveniet sequi amet
+        temporibus voluptatum praesentium quis molestiae placeat sunt. Facilis
+        ea consequuntur libero ex quas autem illo tempore architecto magni
+        tempora veniam sequi aliquam eius et laborum quisquam eos eveniet
+        accusamus, excepturi corporis quidem natus aspernatur officiis debitis.
+        Autem a inventore omnis odio accusamus, officiis nulla distinctio ab
+        corrupti aperiam dolorem! Totam, reprehenderit! Quos sapiente facilis
+        eius rem impedit itaque odit doloremque repellat repellendus, omnis
+        dolore quas consequatur eveniet recusandae autem labore facere beatae
+        atque totam repudiandae velit a? Cum porro dolorum totam nostrum, dicta
+        velit eius, doloremque voluptates eveniet quibusdam voluptatem facilis
+        quis temporibus aliquid? Ex laborum sunt error quasi tenetur ea non
+        provident quis modi sint aut quisquam vitae itaque dolores natus a
+        molestias, repudiandae voluptates voluptatem tempore molestiae. Officiis
+        aliquid aliquam vel corporis fugiat voluptatum eligendi sunt ullam
+        deserunt atque magni ab esse vero sed ratione, id qui at. Laboriosam
+        possimus eius beatae cum officiis amet minima reprehenderit voluptas
+        facilis accusamus debitis cumque minus quidem nobis similique quam porro
+        id, eveniet nulla quod sunt doloremque natus iure. Quod, consequuntur.
+        Facilis dolorem quas voluptatum iusto itaque recusandae modi quos,
+        laudantium, obcaecati officia id neque eum aperiam quia similique culpa
+        corporis eveniet ipsa? In facilis excepturi sunt quae nihil! Magni amet
+        tempora placeat dolor ut nemo eos facilis nisi numquam eligendi quos
+        iste, repellat excepturi laboriosam in corrupti neque, cupiditate, alias
+        modi. Consequatur provident officia autem molestiae id, magni dolorem
+        quis consequuntur nisi explicabo, ratione, maiores esse totam? Minus
+        optio, debitis perferendis esse architecto unde distinctio corrupti
+        veniam inventore perspiciatis aspernatur dignissimos eligendi
+        reprehenderit corporis suscipit et asperiores est fuga aliquam neque
+        animi rerum blanditiis. Labore omnis pariatur dolore tempore. Tempora,
+        veniam veritatis suscipit itaque sapiente nulla. Praesentium vero
+        exercitationem, dolores distinctio, non alias soluta modi quas quae
+        neque, a nam fugiat dolorem eos sunt. Amet sequi corrupti perferendis
+        possimus, ea ipsa. Expedita pariatur corrupti sit magni maiores animi
+        adipisci aliquid officiis laboriosam. Tempora vitae voluptatem incidunt
+        commodi tempore veniam eius! Soluta iusto numquam omnis odio vitae non
+        magni dicta eaque! Corrupti rem aliquam quas veritatis sapiente
+        accusamus, amet totam odio repudiandae tenetur, repellendus dicta ex
+        laborum ipsam porro unde a officiis molestiae magni modi exercitationem
+        adipisci? Alias vitae odit iusto deserunt nulla delectus, distinctio
+        quis impedit dolorum fugit omnis voluptates recusandae hic labore ea in
+        eos, pariatur necessitatibus ab saepe veniam placeat ipsa provident?
+        Voluptatem doloribus perferendis voluptas iusto, vitae, neque esse
+        reiciendis saepe excepturi, autem asperiores ipsum repellendus nesciunt
+        numquam debitis perspiciatis atque reprehenderit impedit exercitationem
+        pariatur libero sed. Qui quasi deleniti magni ullam totam, culpa earum
+        dignissimos possimus accusamus? Asperiores, dolores nam, blanditiis
+        quaerat iste, qui animi officiis aspernatur nisi quam reprehenderit
+        aliquam. Nam nostrum fugiat voluptas, excepturi non iusto vel laborum
+        quae hic enim. Labore modi neque necessitatibus, quia officiis
+        voluptatum cum ullam ad odio distinctio, incidunt quis totam molestias
+        dicta, autem dolorem consequuntur pariatur omnis expedita! Quasi impedit
+        porro repellendus, nisi voluptate commodi voluptatibus quibusdam
+        obcaecati, expedita id repellat deleniti animi aliquid. Atque voluptate
+        aut eos fugit ab a veritatis autem. Totam cumque laudantium impedit
+        magni tempore illum. Quibusdam libero in perspiciatis? Eveniet error
+        inventore amet est fugiat numquam totam, provident ullam mollitia quos
+        cum odio praesentium veniam? Earum exercitationem placeat enim magni,
+        quam autem quisquam nemo consectetur! Mollitia minus quidem nulla itaque
+        veritatis ducimus quod ab reprehenderit voluptates quibusdam dolorum est
+        expedita aut natus, exercitationem, dolore magnam saepe sit temporibus
+        quia voluptas! Corporis, sit omnis nulla at quisquam, asperiores officia
+        magni dignissimos ad velit hic sapiente cupiditate obcaecati voluptate.
+        Velit excepturi laudantium ex quos vero saepe sit nostrum quidem
+        architecto nemo fuga, voluptatum reiciendis quis eos ratione nihil omnis
+        beatae aut animi aliquid, sequi et voluptates? Accusamus velit nihil
+        nemo expedita distinctio quae officiis vel minus, animi nostrum deleniti
+        similique ad vero totam. Impedit non amet corrupti et vitae quibusdam
+        perferendis eius ipsam rerum temporibus aut consequatur facere quidem
+        possimus aliquid laboriosam sit officiis ipsa dicta voluptatem, nostrum
+        nesciunt corporis dolor? Ipsam incidunt vel consectetur provident eum,
+        similique, autem, nobis quisquam unde placeat ut. Dolores consequatur
+        totam ratione alias. Veritatis quae quis nemo! Esse incidunt unde,
+        repellendus repellat alias dignissimos ducimus rem consequatur nihil
+        placeat dicta corporis sequi vero odit dolorem voluptate totam fuga qui.
+        Deserunt fugiat alias, rem eligendi illo consectetur incidunt labore
+        sint perspiciatis libero eaque vero harum numquam assumenda voluptates
+        fugit quas quasi veniam amet hic. Unde corrupti id adipisci dolorem
+        autem est nulla esse, qui illo aut? Consequatur nobis nisi labore
+        assumenda. Exercitationem sint accusantium dignissimos officiis
+        repellendus commodi est blanditiis debitis magnam quia praesentium,
+        labore quisquam reprehenderit quis eius rem molestias deleniti ipsum
+        nostrum facilis aut. Illum adipisci voluptas placeat, tenetur officiis,
+        dolore eligendi esse corrupti aut voluptatibus nesciunt quos! Nesciunt
+        sequi at ad unde inventore totam deleniti eum exercitationem, delectus
+        error quasi rem.
+      </p>
+    </main>
+  </body>
 </html>
