--- a/index.html
+++ b/index.html
@@ -14,7 +14,13 @@
     <title>Responsive Navbar</title>
   </head>
   <body>
-    <nav></nav>
+    <nav class="navbar">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a href="#" class="nav-link"><span class="link-text">cats</span></a>
+        </li>
+      </ul>
+    </nav>
     <main>
       <h1>Tech Bubble is Bursting...</h1>
       <p>
